argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  internalTrafficPolicy: Cluster
  selector:
    app: java-app
    deployment: app-deployment
